# COCKPIT

./: .gitignore  DEPLOY.md  LICENSE  README.md  SEQUENCE.md
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_marketing.sql
src-tauri/src/: db.rs  lib.rs  models.rs
src-tauri/src/commands/: mod.rs
src/styles/: components.css  layout.css  theme.css
src/views/: clients.js  dashboard.js  marketing.js  projects.js  settings.js
src/views/components/: categories.js  drawer.js  modal.js  utils.js
